no where close to finished

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     volumes:
       - ./:/var/www/html
       - ./data:/var/www/html/data
+    working_dir: /var/www/html
     environment:
       - APACHE_RUN_USER=www-data
       - APACHE_RUN_GROUP=www-data
